Centralize test fixtures in TestData class
Extract user and role factory methods and shared constants (department
names, timestamps) into a single TestData helper. Refactor Controller,
Service, and Repository tests to read from it. Also document Docker
commands in README.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>